Pre-translating flowview again

--- a/locales/po/bg-BG.po
+++ b/locales/po/bg-BG.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 19:54-0400\n"
+"PO-Revision-Date: 2019-07-21 21:23-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: bg_BG\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "Статистически доклади"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "Резюме"
 
@@ -424,7 +423,6 @@ msgid "IDRP"
 msgstr "IDRP"
 
 #: arrays.php:116
-#, fuzzy
 msgid "RSVP"
 msgstr "Регистрация"
 
@@ -504,22 +502,18 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "Да"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "Не"
 
 #: arrays.php:166 arrays.php:177 functions.php:117
-#, fuzzy
 msgid "None"
 msgstr "Няма"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "Всички"
 
@@ -578,7 +572,6 @@ msgstr "Пакети"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "Порт"
 
@@ -599,7 +592,6 @@ msgid "Src/Dest IP"
 msgstr "Src / IP адрес"
 
 #: arrays.php:278 arrays.php:292 arrays.php:293 arrays.php:294 flowview.php:821
-#, fuzzy
 msgid "Protocol"
 msgstr "Протокол"
 
@@ -624,7 +616,6 @@ msgid "Dest AS"
 msgstr "Dest AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "Усложия за ползуване"
 
@@ -639,7 +630,6 @@ msgid "Dest Prefix"
 msgstr "Преден префикс"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "Активен"
 
@@ -659,7 +649,6 @@ msgid "Dest Port"
 msgstr "Пристанищен порт"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "Краен час"
 
@@ -679,7 +668,6 @@ msgid "Src Port"
 msgstr "Порт Src"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "Начален час"
 
@@ -689,7 +677,6 @@ msgid "Ts"
 msgstr "Ц."
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
 msgstr "Знамена"
 
@@ -699,27 +686,22 @@ msgid "Flow Filter Constraints"
 msgstr "Ограничения на филтъра на потока"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "Филтър"
 
 #: flowview.php:289
-#, fuzzy
 msgid "Listener"
 msgstr "Слушател"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
-msgstr "пресети"
+msgstr "Предварително"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "Персонализиране"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "Начална Дата"
 
@@ -729,7 +711,6 @@ msgid "Start Date Selector"
 msgstr "Стартирайте Селектора за дата"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "Крайна дата"
 
@@ -790,7 +771,6 @@ msgstr ""
 "порт, но 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "Бележка:"
 
@@ -835,7 +815,6 @@ msgid "Minimum Bytes:"
 msgstr "Минимални байтове:"
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "Преглед"
 
@@ -845,17 +824,14 @@ msgid "Defaults"
 msgstr "По подразбиране"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "Запази"
 
 #: flowview.php:457
-#, fuzzy
 msgid "Save As"
 msgstr "Запис като"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "Изтрий"
 
@@ -870,12 +846,10 @@ msgid "New Query"
 msgstr "Нова заявка"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "Отказ"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "Обновяване"
 
@@ -895,14 +869,12 @@ msgid "Filter Updated"
 msgstr "Филтърът е актуализиран"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP адрес"
 
 #: flowview.php:828
-#, fuzzy
 msgid "Interface"
-msgstr "интерфейс"
+msgstr "Интерфейс"
 
 #: flowview.php:843
 #, fuzzy
@@ -910,7 +882,6 @@ msgid "AS"
 msgstr "КАТО"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "Префикс"
 
@@ -1070,7 +1041,6 @@ msgid "Name of the device to be displayed."
 msgstr "Име на устройството, което ще се показва."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "Папка"
 
@@ -1142,7 +1112,6 @@ msgstr ""
 "място, но използва повече CPU за съхраняване и извличане на резултати."
 
 #: flowview_devices.php:156 flowview_devices.php:457
-#, fuzzy
 msgid "Rotation"
 msgstr "Завъртане"
 
@@ -1152,7 +1121,6 @@ msgid "How often to create a new Flow File."
 msgstr "Колко често да се създава нов поточен файл."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "Краен срок"
 
@@ -1185,7 +1153,6 @@ msgid "You must select at least one device."
 msgstr "Трябва да изберете поне едно устройство."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "Продължи"
 
@@ -1205,12 +1172,10 @@ msgid "FlowView Listeners"
 msgstr "Слушатели на FlowView"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "Търсене"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "Търси"
 
@@ -1220,7 +1185,6 @@ msgid "Set/Refresh Filters"
 msgstr "Задаване / опресняване на филтрите"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "Изчисти"
 
@@ -1235,7 +1199,6 @@ msgid "Listeners"
 msgstr "Слушатели"
 
 #: flowview_devices.php:450
-#, fuzzy
 msgid "Name"
 msgstr "Име"
 
@@ -1245,7 +1208,6 @@ msgid "Allowed From"
 msgstr "Разрешено от"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "Версия"
 
@@ -1265,17 +1227,14 @@ msgid "No Devices"
 msgstr "Устройства"
 
 #: flowview_schedules.php:33
-#, fuzzy
 msgid "Send Now"
 msgstr "Изпрати"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "Изключи"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "Включи"
 
@@ -1311,7 +1270,6 @@ msgid "Every Month"
 msgstr "Всеки месец"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "Заглавие"
 
@@ -1326,7 +1284,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "Въведете заглавие на отчета за графика на потока."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "Разрешен"
 
@@ -1418,7 +1375,6 @@ msgid "Schedules"
 msgstr "Списъци"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "По подразбиране"
 
@@ -1428,7 +1384,6 @@ msgid "Schedule Title"
 msgstr "Заглавие на графика"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "Интервал"
 
@@ -1438,7 +1393,6 @@ msgid "Next Send"
 msgstr "Следваща Изпращане"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "Имейл"
 
@@ -1448,7 +1402,6 @@ msgid "Report: %s"
 msgstr "Отчет: %s"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "Изключване"
 
@@ -1478,12 +1431,10 @@ msgid "Top 5 Samples"
 msgstr "Топ 5 проби"
 
 #: functions.php:126
-#, fuzzy
 msgid "Show/Hide"
-msgstr "Покажи скрий"
+msgstr "Покажи/Скрий"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "Таблица"
 
@@ -1503,7 +1454,6 @@ msgid "Flows Bar"
 msgstr "Бар за потоци"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
 msgstr "Филтри"
 
@@ -1523,7 +1473,6 @@ msgid "Manage Schedules"
 msgstr "Управление на графиците"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "알려지지 않음"
 
