--- a/locales/po/el-GR.po
+++ b/locales/po/el-GR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 20:43-0400\n"
+"PO-Revision-Date: 2019-07-21 21:23-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: el_GR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "Στατιστικές αναφορές"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "Περίληψη"
 
@@ -228,7 +227,6 @@ msgid "IPENCAP"
 msgstr "IPENCAP"
 
 #: arrays.php:77
-#, fuzzy
 msgid "ST"
 msgstr "Σεν. Φορ"
 
@@ -503,22 +501,18 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "Ναι"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "Όχι"
 
 #: arrays.php:166 arrays.php:177 functions.php:117
-#, fuzzy
 msgid "None"
 msgstr "Κανένα"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "Όλα"
 
@@ -529,7 +523,6 @@ msgid "Top %d"
 msgstr "Κορυφαία% d"
 
 #: arrays.php:207
-#, fuzzy
 msgid "No Limit"
 msgstr "Χωρίς Όριο"
 
@@ -577,7 +570,6 @@ msgstr "Πακέτα"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "Θύρα"
 
@@ -623,7 +615,6 @@ msgid "Dest AS"
 msgstr "Dest AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "Όροι Χρήσης"
 
@@ -638,7 +629,6 @@ msgid "Dest Prefix"
 msgstr "Dest Prefix"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "Ενεργό"
 
@@ -658,7 +648,6 @@ msgid "Dest Port"
 msgstr "Dest Port"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "Ώρα Λήξης"
 
@@ -678,7 +667,6 @@ msgid "Src Port"
 msgstr "Src Port"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "Ώρα Έναρξης"
 
@@ -688,7 +676,6 @@ msgid "Ts"
 msgstr "Ts"
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
 msgstr "Σημαίες"
 
@@ -698,7 +685,6 @@ msgid "Flow Filter Constraints"
 msgstr "Περιορισμοί φίλτρου ροής"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "Φίλτρο"
 
@@ -713,12 +699,10 @@ msgid "Presets"
 msgstr "Προεπιλογές"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "Προσαρμογή"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "Ημερομηνία Έναρξης"
 
@@ -728,7 +712,6 @@ msgid "Start Date Selector"
 msgstr "Επιλογή επιλογής έναρξης"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "Ημερομηνία Λήξης"
 
@@ -789,7 +772,6 @@ msgstr ""
 "για το Port, θα σημαίνει οποιοδήποτε λιμάνι, αλλά 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "Σημείωση:"
 
@@ -834,27 +816,22 @@ msgid "Minimum Bytes:"
 msgstr "Ελάχιστα byte:"
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "Προβολή"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "Προκαθορισμένες τιμές"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "Αποθήκευση"
 
 #: flowview.php:457
-#, fuzzy
 msgid "Save As"
-msgstr "Αποθήκευση ως"
+msgstr "Αποθήκευση Ως"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "Διαγραφή"
 
@@ -869,12 +846,10 @@ msgid "New Query"
 msgstr "Νέο ερώτημα"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "Ακύρωση"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "Ενημέρωση"
 
@@ -894,7 +869,6 @@ msgid "Filter Updated"
 msgstr "Φιλτράρισμα ενημέρωσης"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP"
 
@@ -909,12 +883,11 @@ msgid "AS"
 msgstr "ΟΠΩΣ ΚΑΙ"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "Πρόθεμα"
 
 #: flowview_devices.php:36 flowview_devices.php:37
-#, fuzzy, php-format
+#, php-format
 msgid "%d Days"
 msgstr "%d Ημέρες"
 
@@ -929,17 +902,17 @@ msgid "%d Weeks"
 msgstr "% d εβδομάδες"
 
 #: flowview_devices.php:40
-#, fuzzy, php-format
+#, php-format
 msgid "%d Month"
-msgstr "% d Μήνας"
+msgstr "% d Μήνα"
 
 #: flowview_devices.php:41 flowview_devices.php:42 flowview_devices.php:43
-#, fuzzy, php-format
+#, php-format
 msgid "%d Months"
-msgstr "% d Μήνες"
+msgstr "% d Μήνας"
 
 #: flowview_devices.php:44
-#, fuzzy, php-format
+#, php-format
 msgid "%d Year"
 msgstr "% d Έτος"
 
@@ -1059,7 +1032,6 @@ msgid "9 (Highest)"
 msgstr "9 (Υψηλότερη)"
 
 #: flowview_devices.php:101
-#, fuzzy
 msgid "Device Name"
 msgstr "Όνομα συσκευής"
 
@@ -1069,7 +1041,6 @@ msgid "Name of the device to be displayed."
 msgstr "Όνομα της συσκευής που θα εμφανιστεί."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "Κατάλογος"
 
@@ -1150,7 +1121,6 @@ msgid "How often to create a new Flow File."
 msgstr "Πόσο συχνά δημιουργείτε ένα νέο αρχείο ροής."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "Λήξη"
 
@@ -1184,7 +1154,6 @@ msgid "You must select at least one device."
 msgstr "Πρέπει να επιλέξετε τουλάχιστον μία συσκευή."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "Συνέχεια"
 
@@ -1204,12 +1173,10 @@ msgid "FlowView Listeners"
 msgstr "Οι ακροατές ροής δεδομένων"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "Αναζήτηση"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "Πήγαινε"
 
@@ -1219,12 +1186,10 @@ msgid "Set/Refresh Filters"
 msgstr "Ρύθμιση / Ανανέωση φίλτρων"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "Καθαρισμός"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear Filters"
 msgstr "Καθαρισμός Φίλτρων"
 
@@ -1234,7 +1199,6 @@ msgid "Listeners"
 msgstr "Ακρόαση"
 
 #: flowview_devices.php:450
-#, fuzzy
 msgid "Name"
 msgstr "Όνομα"
 
@@ -1244,7 +1208,6 @@ msgid "Allowed From"
 msgstr "Επιτρέπεται από"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "Έκδοση"
 
@@ -1264,17 +1227,14 @@ msgid "No Devices"
 msgstr "Τύπος Συσκευής"
 
 #: flowview_schedules.php:33
-#, fuzzy
 msgid "Send Now"
-msgstr "Στειλε τωρα"
+msgstr "Αποστολή τώρα"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "Απενεργοποίηση"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "Ενεργοποίηση"
 
@@ -1295,7 +1255,6 @@ msgid "Every Day"
 msgstr "Κάθε μέρα"
 
 #: flowview_schedules.php:46
-#, fuzzy
 msgid "Every Week"
 msgstr "Κάθε Εβδομάδα"
 
@@ -1305,12 +1264,10 @@ msgid "Every %d Weeks, 2"
 msgstr "Κάθε% d εβδομάδες, 2"
 
 #: flowview_schedules.php:48
-#, fuzzy
 msgid "Every Month"
 msgstr "Κάθε Μήνα"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "Τίτλος"
 
@@ -1325,7 +1282,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "Καταχωρίστε έναν τίτλο αναφοράς για το πρόγραμμα FlowView."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "Ενεργοποιημένο"
 
@@ -1427,17 +1383,14 @@ msgid "Schedules"
 msgstr "Πρόγραμμα"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "Προεπιλογή"
 
 #: flowview_schedules.php:501
-#, fuzzy
 msgid "Schedule Title"
 msgstr "Τίτλος χρονοδιαγράμματος"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "Διάστημα"
 
@@ -1447,7 +1400,6 @@ msgid "Next Send"
 msgstr "Επόμενο Αποστολή"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "Email"
 
@@ -1492,7 +1444,6 @@ msgid "Show/Hide"
 msgstr "Εμφάνιση απόκρυψη"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "Πίνακας"
 
@@ -1512,7 +1463,6 @@ msgid "Flows Bar"
 msgstr "Ροή ροής"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
 msgstr "Φίλτρα"
 
@@ -1532,7 +1482,6 @@ msgid "Manage Schedules"
 msgstr "Διαχείριση Προγραμμάτων"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "Άγνωστο"
 
@@ -1824,6 +1773,5 @@ msgstr ""
 "Μια οριοθετημένη με κόμμα λίστα ονομάτων τομέων για απογύμνωση από τον τομέα."
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "Διάφορα"
