--- a/locales/po/he-IL.po
+++ b/locales/po/he-IL.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 21:06-0400\n"
+"PO-Revision-Date: 2019-07-21 21:24-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: he_IL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "דוחות סטטיסטיים"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "סיכום"
 
@@ -193,7 +192,6 @@ msgid "Entirely in Specified Time Span"
 msgstr "לגמרי בספאן זמן מוגדר"
 
 #: arrays.php:70
-#, fuzzy
 msgid "Select One"
 msgstr "אנא בחר באחת האפשרויות הבאות"
 
@@ -423,7 +421,6 @@ msgid "IDRP"
 msgstr "IDRP"
 
 #: arrays.php:116
-#, fuzzy
 msgid "RSVP"
 msgstr "אישור הגהה"
 
@@ -503,12 +500,10 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "כן"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "לא"
 
@@ -518,7 +513,6 @@ msgid "None"
 msgstr "ללא"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "הכל"
 
@@ -548,7 +542,6 @@ msgstr "%s בתים"
 #: flowview.php:823 flowview.php:830 flowview.php:838 flowview.php:845
 #: flowview.php:853 flowview.php:860 flowview.php:867 flowview.php:875
 #: functions.php:590
-#, fuzzy
 msgid "Bytes"
 msgstr "בייטים"
 
@@ -577,7 +570,6 @@ msgstr "מנות"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "פורט"
 
@@ -598,7 +590,6 @@ msgid "Src/Dest IP"
 msgstr "Src / Dest IP"
 
 #: arrays.php:278 arrays.php:292 arrays.php:293 arrays.php:294 flowview.php:821
-#, fuzzy
 msgid "Protocol"
 msgstr "פרוטוקול"
 
@@ -623,7 +614,6 @@ msgid "Dest AS"
 msgstr "Dest AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "תנאי שירות"
 
@@ -638,7 +628,6 @@ msgid "Dest Prefix"
 msgstr "קידומת Dest"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "פעיל"
 
@@ -658,7 +647,6 @@ msgid "Dest Port"
 msgstr "נמל דסט"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "שעת סיום"
 
@@ -678,7 +666,6 @@ msgid "Src Port"
 msgstr "נמל סרק"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "שעת התחלה"
 
@@ -688,7 +675,6 @@ msgid "Ts"
 msgstr "Ts"
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
 msgstr "דגלים"
 
@@ -698,7 +684,6 @@ msgid "Flow Filter Constraints"
 msgstr "זרימת מסננים אילוצים"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "סינון"
 
@@ -708,17 +693,14 @@ msgid "Listener"
 msgstr "מקשיב"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
 msgstr "קבועים מראש"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "מותאם אישית"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "תאריך התחלה"
 
@@ -728,7 +710,6 @@ msgid "Start Date Selector"
 msgstr "בורר תאריך התחלה"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "תאריך סיום"
 
@@ -738,7 +719,6 @@ msgid "End Date Selector"
 msgstr "סיים את בורר התאריכים"
 
 #: flowview.php:335
-#, fuzzy
 msgid "Protocols"
 msgstr "פרוטוקולים"
 
@@ -788,7 +768,6 @@ msgstr ""
 "כניסה (למשל -80 עבור Port, פירושו כל יציאה, אך 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "הערה:"
 
@@ -833,17 +812,14 @@ msgid "Minimum Bytes:"
 msgstr "בתים מינימליים:"
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "הצג"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "הגדרות (ברירת המחדל"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "שמור"
 
@@ -853,12 +829,10 @@ msgid "Save As"
 msgstr "שמור כ"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "מחק"
 
 #: flowview.php:467 flowview_schedules.php:70 flowview_schedules.php:502
-#, fuzzy
 msgid "Filter Name"
 msgstr "שם הסינון"
 
@@ -868,12 +842,10 @@ msgid "New Query"
 msgstr "שאילתה חדשה"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "ביטול"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "עדכון"
 
@@ -893,12 +865,10 @@ msgid "Filter Updated"
 msgstr "מסנן עודכן"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "כתובת IP"
 
 #: flowview.php:828
-#, fuzzy
 msgid "Interface"
 msgstr "ממשק"
 
@@ -908,12 +878,11 @@ msgid "AS"
 msgstr "כפי ש"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "קידומת"
 
 #: flowview_devices.php:36 flowview_devices.php:37
-#, fuzzy, php-format
+#, php-format
 msgid "%d Days"
 msgstr "%d ימים"
 
@@ -1068,7 +1037,6 @@ msgid "Name of the device to be displayed."
 msgstr "שם ההתקן שיוצג."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "אינדקס שרותים ועסקים"
 
@@ -1148,7 +1116,6 @@ msgid "How often to create a new Flow File."
 msgstr "כמה פעמים ליצור קובץ זרימה חדש."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "תאריך תפוגה"
 
@@ -1179,7 +1146,6 @@ msgid "You must select at least one device."
 msgstr "עליך לבחור לפחות מכשיר אחד."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "המשך"
 
@@ -1199,12 +1165,10 @@ msgid "FlowView Listeners"
 msgstr "FlowView מאזינים"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "חיפוש"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "עבור"
 
@@ -1214,12 +1178,10 @@ msgid "Set/Refresh Filters"
 msgstr "הגדר / רענן מסננים"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "נקה"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear Filters"
 msgstr "מחיקת מסננים"
 
@@ -1239,7 +1201,6 @@ msgid "Allowed From"
 msgstr "מותר מ"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "גרסה"
 
@@ -1249,7 +1210,6 @@ msgid "Compression"
 msgstr "דחיסה"
 
 #: flowview_devices.php:458
-#, fuzzy
 msgid "Expire"
 msgstr "תאריך פקיעה"
 
@@ -1266,12 +1226,10 @@ msgid "Send Now"
 msgstr "שלח עכשיו"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "כיבוי"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "אפשר"
 
@@ -1287,12 +1245,10 @@ msgid "Every %d Hours"
 msgstr "כל% d שעות"
 
 #: flowview_schedules.php:45
-#, fuzzy
 msgid "Every Day"
 msgstr "כל יום"
 
 #: flowview_schedules.php:46
-#, fuzzy
 msgid "Every Week"
 msgstr "כל שבוע"
 
@@ -1302,12 +1258,10 @@ msgid "Every %d Weeks, 2"
 msgstr "כל% d שבועות, 2"
 
 #: flowview_schedules.php:48
-#, fuzzy
 msgid "Every Month"
 msgstr "כל חודש"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "כותרת"
 
@@ -1322,7 +1276,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "הזן כותרת דוח עבור לוח הזמנים של FlowView."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "מאופשר"
 
@@ -1356,7 +1309,6 @@ msgstr ""
 "העתידיות יחושבו מחוץ לזמן זה בתוספת מרווח הזמן."
 
 #: flowview_schedules.php:94
-#, fuzzy
 msgid "Email Addresses"
 msgstr "כתובות דוא\"ל"
 
@@ -1407,22 +1359,18 @@ msgstr "לוחות זמנים של זרימה"
 
 #: flowview_schedules.php:411 flowview_schedules.php:492 functions.php:318
 #: setup.php:167
-#, fuzzy
 msgid "Schedules"
 msgstr "תזמונים"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "ברירת מחדל"
 
 #: flowview_schedules.php:501
-#, fuzzy
 msgid "Schedule Title"
 msgstr "כותרת התזמון"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "מרווח"
 
@@ -1432,7 +1380,6 @@ msgid "Next Send"
 msgstr "שלח"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "אימייל"
 
@@ -1442,7 +1389,6 @@ msgid "Report: %s"
 msgstr "דיווחים"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "לא לכלול"
 
@@ -1477,7 +1423,6 @@ msgid "Show/Hide"
 msgstr "הצג הסתר"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "טבלה"
 
@@ -1497,9 +1442,8 @@ msgid "Flows Bar"
 msgstr "תזרים בר"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
-msgstr "מסננים"
+msgstr "סינון"
 
 #: functions.php:311
 #, fuzzy
@@ -1517,7 +1461,6 @@ msgid "Manage Schedules"
 msgstr "ניהול לוחות זמנים"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "לא ידוע"
 
@@ -1796,6 +1739,5 @@ msgid "A comma delimited list of domains names to strip from the domain."
 msgstr "רשימה מופרדת בפסיקים של שמות תחומים שתוסר מהרשת."
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "שונות"
