--- a/locales/po/pl-PL.po
+++ b/locales/po/pl-PL.po
@@ -8,17 +8,17 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-07-13 04:14+0000\n"
+"PO-Revision-Date: 2019-07-21 21:25-0400\n"
 "Last-Translator: Jaroslaw Kłopotek <jkl@interduo.pl>\n"
 "Language-Team: Polish <http://translate.cacti.net/projects/cacti/flowview/pl-"
 "PL/>\n"
-"Language: pl-PL\n"
+"Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 3.4-dev\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -26,7 +26,6 @@ msgid "Select a Statistic Report"
 msgstr "Sprawozdania statystyczne"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "Podsumowanie"
 
@@ -51,7 +50,6 @@ msgid "Destination IP"
 msgstr "Miejsce przeznaczenia IP"
 
 #: arrays.php:32 flowview.php:358 flowview.php:799
-#, fuzzy
 msgid "Source IP"
 msgstr "IP źródłowe"
 
@@ -196,7 +194,6 @@ msgid "Entirely in Specified Time Span"
 msgstr "W całości w określonym zakresie czasowym"
 
 #: arrays.php:70
-#, fuzzy
 msgid "Select One"
 msgstr "Wybierz jeden"
 
@@ -426,7 +423,6 @@ msgid "IDRP"
 msgstr "IDRP"
 
 #: arrays.php:116
-#, fuzzy
 msgid "RSVP"
 msgstr "Zgłoszenie uczestnictwa"
 
@@ -506,12 +502,10 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "Tak"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "Nie"
 
@@ -520,7 +514,6 @@ msgid "None"
 msgstr "Brak"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "Wszystkie"
 
@@ -550,9 +543,8 @@ msgstr "%s Bajty"
 #: flowview.php:823 flowview.php:830 flowview.php:838 flowview.php:845
 #: flowview.php:853 flowview.php:860 flowview.php:867 flowview.php:875
 #: functions.php:590
-#, fuzzy
 msgid "Bytes"
-msgstr "Bajty"
+msgstr "Bajtów"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 arrays.php:274 arrays.php:275
 #: arrays.php:276 arrays.php:277 arrays.php:278 arrays.php:279 arrays.php:280
@@ -579,7 +571,6 @@ msgstr "Pakiety"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "Port"
 
@@ -600,7 +591,6 @@ msgid "Src/Dest IP"
 msgstr "Łuk/gniazdo IP"
 
 #: arrays.php:278 arrays.php:292 arrays.php:293 arrays.php:294 flowview.php:821
-#, fuzzy
 msgid "Protocol"
 msgstr "Protokół"
 
@@ -625,7 +615,6 @@ msgid "Dest AS"
 msgstr "Dest AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "OWU"
 
@@ -640,7 +629,6 @@ msgid "Dest Prefix"
 msgstr "Przedrostek gniazda"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "Aktywny"
 
@@ -660,7 +648,6 @@ msgid "Dest Port"
 msgstr "Port docelowy"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "Czas zakończenia"
 
@@ -680,7 +667,6 @@ msgid "Src Port"
 msgstr "Port łuku"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "Czas rozpoczęcia"
 
@@ -690,7 +676,6 @@ msgid "Ts"
 msgstr "Ts"
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
 msgstr "Flagi"
 
@@ -700,7 +685,6 @@ msgid "Flow Filter Constraints"
 msgstr "Ograniczenia filtra przepływowego"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "Filtr"
 
@@ -710,17 +694,14 @@ msgid "Listener"
 msgstr "Słuchacz"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
 msgstr "Presets"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "Własny"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "Data rozpoczęcia"
 
@@ -730,7 +711,6 @@ msgid "Start Date Selector"
 msgstr "Wybór daty rozpoczęcia"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "Data zakończenia"
 
@@ -740,7 +720,6 @@ msgid "End Date Selector"
 msgstr "Wybór daty końcowej"
 
 #: flowview.php:335
-#, fuzzy
 msgid "Protocols"
 msgstr "Protokoły"
 
@@ -791,7 +770,6 @@ msgstr ""
 "każdy port oprócz portu 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "Uwaga:"
 
@@ -840,7 +818,6 @@ msgid "View"
 msgstr "Podgląd"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "Domyślne"
 
@@ -849,7 +826,6 @@ msgid "Save"
 msgstr "Zapisz"
 
 #: flowview.php:457
-#, fuzzy
 msgid "Save As"
 msgstr "Zapisz jako"
 
@@ -872,7 +848,6 @@ msgid "Cancel"
 msgstr "Anuluj"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "Aktualizuj"
 
@@ -892,27 +867,23 @@ msgid "Filter Updated"
 msgstr "Aktualizacja filtra"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP"
 
 #: flowview.php:828
-#, fuzzy
 msgid "Interface"
 msgstr "Interfejs"
 
 #: flowview.php:843
-#, fuzzy
 msgid "AS"
 msgstr "AS"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "Prefiks"
 
 #: flowview_devices.php:36 flowview_devices.php:37
-#, fuzzy, php-format
+#, php-format
 msgid "%d Days"
 msgstr "%d dni"
 
@@ -922,7 +893,7 @@ msgid "%d Week"
 msgstr "%d Tydzień"
 
 #: flowview_devices.php:39
-#, fuzzy, php-format
+#, php-format
 msgid "%d Weeks"
 msgstr "%d tygodni"
 
@@ -942,9 +913,9 @@ msgid "%d Year"
 msgstr "%d rok"
 
 #: flowview_devices.php:48
-#, fuzzy, php-format
+#, php-format
 msgid "%d Minute"
-msgstr "%d Minuta"
+msgstr "%d minuta"
 
 #: flowview_devices.php:49 flowview_devices.php:50 flowview_devices.php:51
 #, fuzzy, php-format
@@ -1067,7 +1038,6 @@ msgid "Name of the device to be displayed."
 msgstr "Nazwa urządzenia, które ma być wyświetlane."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "Katalog"
 
@@ -1140,7 +1110,6 @@ msgstr ""
 "wykorzystuje więcej CPU do przechowywania i pobierania wyników."
 
 #: flowview_devices.php:156 flowview_devices.php:457
-#, fuzzy
 msgid "Rotation"
 msgstr "Rotacja"
 
@@ -1150,7 +1119,6 @@ msgid "How often to create a new Flow File."
 msgstr "Jak często tworzyć nowy plik przepływu."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "Data wygaśnięcia"
 
@@ -1183,7 +1151,6 @@ msgid "You must select at least one device."
 msgstr "Należy wybrać co najmniej jedno urządzenie."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "Kontynuuj"
 
@@ -1207,7 +1174,6 @@ msgid "Search"
 msgstr "Szukaj"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "Idź"
 
@@ -1217,7 +1183,6 @@ msgid "Set/Refresh Filters"
 msgstr "Ustawianie/odświeżanie filtrów"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "Wyczyść"
 
@@ -1232,7 +1197,6 @@ msgid "Listeners"
 msgstr "Słuchawki"
 
 #: flowview_devices.php:450
-#, fuzzy
 msgid "Name"
 msgstr "Nazwa"
 
@@ -1242,7 +1206,6 @@ msgid "Allowed From"
 msgstr "Dozwolone Od"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "Wersja"
 
@@ -1252,7 +1215,6 @@ msgid "Compression"
 msgstr "Kompresja"
 
 #: flowview_devices.php:458
-#, fuzzy
 msgid "Expire"
 msgstr "Wygasa"
 
@@ -1262,22 +1224,18 @@ msgid "No Devices"
 msgstr "Urządzenia"
 
 #: flowview_schedules.php:33
-#, fuzzy
 msgid "Send Now"
 msgstr "Wyślij teraz"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "Wyłącz"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "Włącz"
 
 #: flowview_schedules.php:40
-#, fuzzy
 msgid "Every Hour"
 msgstr "Co godzine"
 
@@ -1293,7 +1251,6 @@ msgid "Every Day"
 msgstr "Codziennie"
 
 #: flowview_schedules.php:46
-#, fuzzy
 msgid "Every Week"
 msgstr "Raz na tygodzień"
 
@@ -1303,17 +1260,14 @@ msgid "Every %d Weeks, 2"
 msgstr "Co tydzień, 2"
 
 #: flowview_schedules.php:48
-#, fuzzy
 msgid "Every Month"
 msgstr "Raz na miesiąc"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "Tytuł"
 
 #: flowview_schedules.php:55
-#, fuzzy
 msgid "New Schedule"
 msgstr "Nowy harmonogram"
 
@@ -1323,7 +1277,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "Wprowadź tytuł raportu dla harmonogramu widoku przepływu."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "Włączone"
 
@@ -1358,9 +1311,8 @@ msgstr ""
 "przedział czasowy."
 
 #: flowview_schedules.php:94
-#, fuzzy
 msgid "Email Addresses"
-msgstr "Adresy e-mail"
+msgstr "Wygeneruj nazwy użytkowników z adresów e-mail"
 
 #: flowview_schedules.php:95
 #, fuzzy
@@ -1412,32 +1364,26 @@ msgstr "Harmonogramy FlowView"
 
 #: flowview_schedules.php:411 flowview_schedules.php:492 functions.php:318
 #: setup.php:167
-#, fuzzy
 msgid "Schedules"
 msgstr "Harmonogram"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "Domyślny"
 
 #: flowview_schedules.php:501
-#, fuzzy
 msgid "Schedule Title"
 msgstr "Tytuł harmonogram"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "Okres"
 
 #: flowview_schedules.php:505
-#, fuzzy
 msgid "Next Send"
 msgstr "Następne do wysłania"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "Email"
 
@@ -1447,7 +1393,6 @@ msgid "Report: %s"
 msgstr "Sprawozdanie: %s"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "Pomiń"
 
@@ -1477,12 +1422,10 @@ msgid "Top 5 Samples"
 msgstr "5 najlepszych próbek"
 
 #: functions.php:126
-#, fuzzy
 msgid "Show/Hide"
 msgstr "Pokaż/Ukryj"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "Tabela"
 
@@ -1502,7 +1445,6 @@ msgid "Flows Bar"
 msgstr "Przepływy Bar"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
 msgstr "Filtry"
 
@@ -1807,6 +1749,5 @@ msgid "A comma delimited list of domains names to strip from the domain."
 msgstr "Przecinek ograniczał listę nazw domen do usunięcia z domeny."
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "Różne"
