--- a/locales/po/pt-PT.po
+++ b/locales/po/pt-PT.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 21:35-0400\n"
+"PO-Revision-Date: 2019-07-21 21:26-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "Relatórios Estatísticos"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "Sua biografia"
 
@@ -423,7 +422,6 @@ msgid "IDRP"
 msgstr "IDRP"
 
 #: arrays.php:116
-#, fuzzy
 msgid "RSVP"
 msgstr "Inscrição"
 
@@ -503,22 +501,18 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "Sim"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "Não"
 
 #: arrays.php:166 arrays.php:177 functions.php:117
-#, fuzzy
 msgid "None"
 msgstr "Nenhum"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "Todos"
 
@@ -577,7 +571,6 @@ msgstr "Pacotes"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "Porta"
 
@@ -623,7 +616,6 @@ msgid "Dest AS"
 msgstr "Destino AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "TDS"
 
@@ -638,7 +630,6 @@ msgid "Dest Prefix"
 msgstr "Prefixo de Destino"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "Activo"
 
@@ -658,7 +649,6 @@ msgid "Dest Port"
 msgstr "Porto de destino"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "Hora do Fim"
 
@@ -678,7 +668,6 @@ msgid "Src Port"
 msgstr "Porta Src"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "Hora de início"
 
@@ -698,7 +687,6 @@ msgid "Flow Filter Constraints"
 msgstr "Restrições do filtro de fluxo"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "Filtrar"
 
@@ -708,17 +696,14 @@ msgid "Listener"
 msgstr "Ouvinte"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
 msgstr "Presets"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "Personalizado"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "Data de início"
 
@@ -728,7 +713,6 @@ msgid "Start Date Selector"
 msgstr "Seletor de data de início"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "Data de Fim"
 
@@ -738,7 +722,6 @@ msgid "End Date Selector"
 msgstr "Seletor de data final"
 
 #: flowview.php:335
-#, fuzzy
 msgid "Protocols"
 msgstr "Protocolos"
 
@@ -789,7 +772,6 @@ msgstr ""
 "para Porto, significaria qualquer Porto menos 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "Nota:"
 
@@ -834,17 +816,14 @@ msgid "Minimum Bytes:"
 msgstr "Bytes mínimos:"
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "Ver"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "Padrão"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "Guardar"
 
@@ -854,12 +833,10 @@ msgid "Save As"
 msgstr "Salvar como"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "Apagar"
 
 #: flowview.php:467 flowview_schedules.php:70 flowview_schedules.php:502
-#, fuzzy
 msgid "Filter Name"
 msgstr "Nome do Filtro"
 
@@ -869,12 +846,10 @@ msgid "New Query"
 msgstr "Nova Consulta"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "Cancelar"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "Atualizar"
 
@@ -894,12 +869,10 @@ msgid "Filter Updated"
 msgstr "Filtro Atualizado"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP"
 
 #: flowview.php:828
-#, fuzzy
 msgid "Interface"
 msgstr "Interface"
 
@@ -909,7 +882,6 @@ msgid "AS"
 msgstr "AS"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "Prefixo"
 
@@ -1059,7 +1031,6 @@ msgid "9 (Highest)"
 msgstr "9 (Mais alto)"
 
 #: flowview_devices.php:101
-#, fuzzy
 msgid "Device Name"
 msgstr "Nome do Dispositivo"
 
@@ -1069,7 +1040,6 @@ msgid "Name of the device to be displayed."
 msgstr "Nome do dispositivo a ser exibido."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "Diretório"
 
@@ -1151,7 +1121,6 @@ msgid "How often to create a new Flow File."
 msgstr "Com que frequência criar um novo ficheiro de fluxo."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "Data de Validade"
 
@@ -1184,7 +1153,6 @@ msgid "You must select at least one device."
 msgstr "Você deve selecionar pelo menos um dispositivo."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "Continuar"
 
@@ -1204,12 +1172,10 @@ msgid "FlowView Listeners"
 msgstr "Escutadores FlowView"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "Pesquisar"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "Ir"
 
@@ -1219,12 +1185,10 @@ msgid "Set/Refresh Filters"
 msgstr "Filtros Set/Refresh"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "Limpar"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear Filters"
 msgstr "Limpar Filtros"
 
@@ -1244,7 +1208,6 @@ msgid "Allowed From"
 msgstr "Permitido a partir de"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "Versão"
 
@@ -1254,9 +1217,8 @@ msgid "Compression"
 msgstr "Compressão"
 
 #: flowview_devices.php:458
-#, fuzzy
 msgid "Expire"
-msgstr "Expirar"
+msgstr "Expira"
 
 #: flowview_devices.php:479
 #, fuzzy
@@ -1264,17 +1226,14 @@ msgid "No Devices"
 msgstr "Dispositivos"
 
 #: flowview_schedules.php:33
-#, fuzzy
 msgid "Send Now"
 msgstr "Enviar Agora"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "Desativar"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "Ativar"
 
@@ -1290,12 +1249,10 @@ msgid "Every %d Hours"
 msgstr "Cada %d Horas"
 
 #: flowview_schedules.php:45
-#, fuzzy
 msgid "Every Day"
 msgstr "Todos os dias"
 
 #: flowview_schedules.php:46
-#, fuzzy
 msgid "Every Week"
 msgstr "Todas as semanas"
 
@@ -1305,17 +1262,14 @@ msgid "Every %d Weeks, 2"
 msgstr "Cada %d Semanas, 2"
 
 #: flowview_schedules.php:48
-#, fuzzy
 msgid "Every Month"
-msgstr "Todos os meses"
+msgstr "Todos os Meses"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "Título"
 
 #: flowview_schedules.php:55
-#, fuzzy
 msgid "New Schedule"
 msgstr "Novo Agendamento"
 
@@ -1325,7 +1279,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "Introduza um título de relatório para o programa FlowView."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "Activado"
 
@@ -1360,7 +1313,6 @@ msgstr ""
 "acima."
 
 #: flowview_schedules.php:94
-#, fuzzy
 msgid "Email Addresses"
 msgstr "Apenas endereços de e-mail"
 
@@ -1413,12 +1365,10 @@ msgstr "Horários FlowView"
 
 #: flowview_schedules.php:411 flowview_schedules.php:492 functions.php:318
 #: setup.php:167
-#, fuzzy
 msgid "Schedules"
 msgstr "Informações"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "Padrão"
 
@@ -1428,7 +1378,6 @@ msgid "Schedule Title"
 msgstr "Título da agenda"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "Por favor, selecione um intervalo de subscrição"
 
@@ -1438,7 +1387,6 @@ msgid "Next Send"
 msgstr "Próximo Enviar"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "Email"
 
@@ -1448,7 +1396,6 @@ msgid "Report: %s"
 msgstr "Relatório: %s"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "Excluir"
 
@@ -1478,12 +1425,10 @@ msgid "Top 5 Samples"
 msgstr "Top 5 Amostras"
 
 #: functions.php:126
-#, fuzzy
 msgid "Show/Hide"
 msgstr "mostrar/ocultar"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "Tabela"
 
@@ -1503,7 +1448,6 @@ msgid "Flows Bar"
 msgstr "Barra de Fluxos"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
 msgstr "Filtros"
 
@@ -1523,7 +1467,6 @@ msgid "Manage Schedules"
 msgstr "Administrar programações"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "Desconhecido"
 
@@ -1810,6 +1753,5 @@ msgstr ""
 "domínio."
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "Diversos"
