--- a/locales/po/sv-SE.po
+++ b/locales/po/sv-SE.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 21:41-0400\n"
+"PO-Revision-Date: 2019-07-21 21:27-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "Statistikrapporter"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "Sammanfattning"
 
@@ -423,7 +422,6 @@ msgid "IDRP"
 msgstr "IDRP"
 
 #: arrays.php:116
-#, fuzzy
 msgid "RSVP"
 msgstr "OSA"
 
@@ -503,22 +501,18 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "Ja"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "Nej"
 
 #: arrays.php:166 arrays.php:177 functions.php:117
-#, fuzzy
 msgid "None"
 msgstr "Ingen"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "Alla"
 
@@ -529,7 +523,6 @@ msgid "Top %d"
 msgstr "Överst% d"
 
 #: arrays.php:207
-#, fuzzy
 msgid "No Limit"
 msgstr "No Limit"
 
@@ -548,7 +541,6 @@ msgstr "%s Bytes"
 #: flowview.php:823 flowview.php:830 flowview.php:838 flowview.php:845
 #: flowview.php:853 flowview.php:860 flowview.php:867 flowview.php:875
 #: functions.php:590
-#, fuzzy
 msgid "Bytes"
 msgstr "Byte"
 
@@ -577,7 +569,6 @@ msgstr "paket"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "Port"
 
@@ -623,7 +614,6 @@ msgid "Dest AS"
 msgstr "Dest AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "Villkor"
 
@@ -638,7 +628,6 @@ msgid "Dest Prefix"
 msgstr "Dest Prefix"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "Aktiv"
 
@@ -658,7 +647,6 @@ msgid "Dest Port"
 msgstr "Dest Port"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "Sluttid"
 
@@ -678,7 +666,6 @@ msgid "Src Port"
 msgstr "Src Port"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "Starttid"
 
@@ -688,7 +675,6 @@ msgid "Ts"
 msgstr "Ts"
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
 msgstr "Flaggor"
 
@@ -698,7 +684,6 @@ msgid "Flow Filter Constraints"
 msgstr "Flödesfilterbegränsningar"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "Filtrera"
 
@@ -708,17 +693,14 @@ msgid "Listener"
 msgstr "Lyssnare"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
 msgstr "Förval"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "Anpassad"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "Startdatum"
 
@@ -728,7 +710,6 @@ msgid "Start Date Selector"
 msgstr "Startdatumsväljare"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "Slutdatum"
 
@@ -738,7 +719,6 @@ msgid "End Date Selector"
 msgstr "Slutdatum Väljare"
 
 #: flowview.php:335
-#, fuzzy
 msgid "Protocols"
 msgstr "Protokoll"
 
@@ -789,12 +769,10 @@ msgstr ""
 "vilken port som helst än 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "Anteckning:"
 
 #: flowview.php:420
-#, fuzzy
 msgid "Report Parameters"
 msgstr "Rapportparametrar"
 
@@ -834,17 +812,14 @@ msgid "Minimum Bytes:"
 msgstr "Minsta byte:"
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "Visa"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "Standard"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "Spara"
 
@@ -854,7 +829,6 @@ msgid "Save As"
 msgstr "Spara som"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "Ta bort"
 
@@ -869,12 +843,10 @@ msgid "New Query"
 msgstr "Ny fråga"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "Avbryt"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "Uppdatera"
 
@@ -894,7 +866,6 @@ msgid "Filter Updated"
 msgstr "Filtrerat uppdaterat"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP"
 
@@ -909,7 +880,6 @@ msgid "AS"
 msgstr "SOM"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "Före"
 
@@ -1069,7 +1039,6 @@ msgid "Name of the device to be displayed."
 msgstr "Namn på enheten som ska visas."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "Katalog"
 
@@ -1140,7 +1109,6 @@ msgstr ""
 "använder mer CPU för att lagra och hämta resultat."
 
 #: flowview_devices.php:156 flowview_devices.php:457
-#, fuzzy
 msgid "Rotation"
 msgstr "t"
 
@@ -1150,7 +1118,6 @@ msgid "How often to create a new Flow File."
 msgstr "Hur ofta skapar du en ny flödesfil."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "Utgång"
 
@@ -1183,7 +1150,6 @@ msgid "You must select at least one device."
 msgstr "Du måste välja minst en enhet."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "Fortsätt"
 
@@ -1203,12 +1169,10 @@ msgid "FlowView Listeners"
 msgstr "FlowView-lyssnare"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "Sök"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "Utför"
 
@@ -1218,7 +1182,6 @@ msgid "Set/Refresh Filters"
 msgstr "Ange / Uppdatera filter"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "Rensa"
 
@@ -1233,7 +1196,6 @@ msgid "Listeners"
 msgstr "lyssnare"
 
 #: flowview_devices.php:450
-#, fuzzy
 msgid "Name"
 msgstr "Namn"
 
@@ -1243,7 +1205,6 @@ msgid "Allowed From"
 msgstr "Tillåtet Från"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "Version"
 
@@ -1253,7 +1214,6 @@ msgid "Compression"
 msgstr "Kompression"
 
 #: flowview_devices.php:458
-#, fuzzy
 msgid "Expire"
 msgstr "Utgår"
 
@@ -1268,12 +1228,10 @@ msgid "Send Now"
 msgstr "Skicka nu"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "Inaktivera"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "Aktivera"
 
@@ -1309,7 +1267,6 @@ msgid "Every Month"
 msgstr "Varje månad"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "Titel"
 
@@ -1324,7 +1281,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "Ange en rapporttitel för FlowView-schemat."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "Aktiverad"
 
@@ -1359,7 +1315,6 @@ msgstr ""
 "det intervall som anges ovan."
 
 #: flowview_schedules.php:94
-#, fuzzy
 msgid "Email Addresses"
 msgstr "E-postadresser"
 
@@ -1416,17 +1371,14 @@ msgid "Schedules"
 msgstr "scheman"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "Standard"
 
 #: flowview_schedules.php:501
-#, fuzzy
 msgid "Schedule Title"
 msgstr "Rubrik för schema"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "Intervall"
 
@@ -1436,7 +1388,6 @@ msgid "Next Send"
 msgstr "Nästa Skicka"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "E-post"
 
@@ -1446,7 +1397,6 @@ msgid "Report: %s"
 msgstr "Rapport: %s"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "Exkludera"
 
@@ -1476,12 +1426,10 @@ msgid "Top 5 Samples"
 msgstr "Topp 5 prov"
 
 #: functions.php:126
-#, fuzzy
 msgid "Show/Hide"
-msgstr "Visa gömma"
+msgstr "Visa/dölj"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "Tabell"
 
@@ -1501,7 +1449,6 @@ msgid "Flows Bar"
 msgstr "Flöden Bar"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
 msgstr "Filter"
 
@@ -1516,12 +1463,10 @@ msgid "Manage Listeners"
 msgstr "Hantera lyssnare"
 
 #: functions.php:318
-#, fuzzy
 msgid "Manage Schedules"
 msgstr "Hantera scheman"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "Okänd"
 
@@ -1803,6 +1748,5 @@ msgid "A comma delimited list of domains names to strip from the domain."
 msgstr "En komma-avgränsad lista över domännamn för att ta bort från domänen."
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "Övrigt"
