--- a/locales/po/tr-TR.po
+++ b/locales/po/tr-TR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 21:43-0400\n"
+"PO-Revision-Date: 2019-07-21 21:27-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: tr_TR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "İstatistik Raporları"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "Özet"
 
@@ -193,7 +192,6 @@ msgid "Entirely in Specified Time Span"
 msgstr "Tamamen Belirtilen Zaman Alanında"
 
 #: arrays.php:70
-#, fuzzy
 msgid "Select One"
 msgstr "Birini seç"
 
@@ -423,7 +421,6 @@ msgid "IDRP"
 msgstr "IDRP"
 
 #: arrays.php:116
-#, fuzzy
 msgid "RSVP"
 msgstr "RSVP | Lütfen Cevap Veriniz"
 
@@ -503,22 +500,18 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "Evet"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "Hayır"
 
 #: arrays.php:166 arrays.php:177 functions.php:117
-#, fuzzy
 msgid "None"
 msgstr "Yok"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "Tümü"
 
@@ -529,7 +522,6 @@ msgid "Top %d"
 msgstr "En iyi% d"
 
 #: arrays.php:207
-#, fuzzy
 msgid "No Limit"
 msgstr "Limit yok"
 
@@ -548,7 +540,6 @@ msgstr "%s Bayt"
 #: flowview.php:823 flowview.php:830 flowview.php:838 flowview.php:845
 #: flowview.php:853 flowview.php:860 flowview.php:867 flowview.php:875
 #: functions.php:590
-#, fuzzy
 msgid "Bytes"
 msgstr "B"
 
@@ -577,7 +568,6 @@ msgstr "paketler"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "Port"
 
@@ -598,7 +588,6 @@ msgid "Src/Dest IP"
 msgstr "Src / Dest IP"
 
 #: arrays.php:278 arrays.php:292 arrays.php:293 arrays.php:294 flowview.php:821
-#, fuzzy
 msgid "Protocol"
 msgstr "Protokol"
 
@@ -623,7 +612,6 @@ msgid "Dest AS"
 msgstr "Hedef AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "Kullanım Şartları"
 
@@ -638,7 +626,6 @@ msgid "Dest Prefix"
 msgstr "Hedef Öneki"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "Aktif"
 
@@ -658,7 +645,6 @@ msgid "Dest Port"
 msgstr "Hedef Limanı"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "Bitiş Zamanı"
 
@@ -678,7 +664,6 @@ msgid "Src Port"
 msgstr "Src Limanı"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "Başlama Zamanı"
 
@@ -688,7 +673,6 @@ msgid "Ts"
 msgstr "ts"
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
 msgstr "Bayraklar"
 
@@ -698,7 +682,6 @@ msgid "Flow Filter Constraints"
 msgstr "Akış Filtresi Kısıtlamaları"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "Filtre"
 
@@ -708,17 +691,14 @@ msgid "Listener"
 msgstr "dinleyici"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
 msgstr "Hazır ayarlar"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "Özel"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "Başlangıç Tarihi"
 
@@ -728,7 +708,6 @@ msgid "Start Date Selector"
 msgstr "Başlangıç Tarihi Seçicisi"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "Bitiş Tarihi"
 
@@ -789,7 +768,6 @@ msgstr ""
 "herhangi bir Bağlantı Noktası anlamına gelir ancak 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "Not:"
 
@@ -834,32 +812,26 @@ msgid "Minimum Bytes:"
 msgstr "Minimum Bayt:"
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "Görünüm"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "Varsayılanlar"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "Kaydet"
 
 #: flowview.php:457
-#, fuzzy
 msgid "Save As"
 msgstr "Farklı Kaydet"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "Sil"
 
 #: flowview.php:467 flowview_schedules.php:70 flowview_schedules.php:502
-#, fuzzy
 msgid "Filter Name"
 msgstr "Filtre Adı"
 
@@ -869,12 +841,10 @@ msgid "New Query"
 msgstr "Yeni Sorgu"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "İptal"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "Güncelle"
 
@@ -894,12 +864,10 @@ msgid "Filter Updated"
 msgstr "Güncelleme Filtresi"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP"
 
 #: flowview.php:828
-#, fuzzy
 msgid "Interface"
 msgstr "Arayüz"
 
@@ -909,12 +877,11 @@ msgid "AS"
 msgstr "GİBİ"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "Ön Ek"
 
 #: flowview_devices.php:36 flowview_devices.php:37
-#, fuzzy, php-format
+#, php-format
 msgid "%d Days"
 msgstr "%d Gün"
 
@@ -944,12 +911,12 @@ msgid "%d Year"
 msgstr "% d Yıl"
 
 #: flowview_devices.php:48
-#, fuzzy, php-format
+#, php-format
 msgid "%d Minute"
-msgstr "% d Dakika"
+msgstr "% d dakika"
 
 #: flowview_devices.php:49 flowview_devices.php:50 flowview_devices.php:51
-#, fuzzy, php-format
+#, php-format
 msgid "%d Minutes"
 msgstr "%d Dakika"
 
@@ -1069,7 +1036,6 @@ msgid "Name of the device to be displayed."
 msgstr "Gösterilecek cihazın adı."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "Rehber"
 
@@ -1140,7 +1106,6 @@ msgstr ""
 "kullanır."
 
 #: flowview_devices.php:156 flowview_devices.php:457
-#, fuzzy
 msgid "Rotation"
 msgstr "Rotasyon"
 
@@ -1150,7 +1115,6 @@ msgid "How often to create a new Flow File."
 msgstr "Ne sıklıkta yeni bir Akış Dosyası oluşturulur."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "Sona erme"
 
@@ -1183,7 +1147,6 @@ msgid "You must select at least one device."
 msgstr "En az bir cihaz seçmelisiniz."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "Devam et"
 
@@ -1203,12 +1166,10 @@ msgid "FlowView Listeners"
 msgstr "FlowView Dinleyicileri"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "Arama"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "Git"
 
@@ -1218,22 +1179,18 @@ msgid "Set/Refresh Filters"
 msgstr "Filtreleri Ayarla / Yenile"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "Temizle"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear Filters"
 msgstr "Filtreleri Temizle"
 
 #: flowview_devices.php:441 functions.php:314 setup.php:139
-#, fuzzy
 msgid "Listeners"
 msgstr "Dinleyiciler"
 
 #: flowview_devices.php:450
-#, fuzzy
 msgid "Name"
 msgstr "İsim"
 
@@ -1243,7 +1200,6 @@ msgid "Allowed From"
 msgstr "İzin Verilen"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "Versiyon"
 
@@ -1253,7 +1209,6 @@ msgid "Compression"
 msgstr "Sıkıştırma"
 
 #: flowview_devices.php:458
-#, fuzzy
 msgid "Expire"
 msgstr "Bitiş Tarihi"
 
@@ -1263,17 +1218,14 @@ msgid "No Devices"
 msgstr "Cihazlar"
 
 #: flowview_schedules.php:33
-#, fuzzy
 msgid "Send Now"
 msgstr "Şimdi Gönder"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "Devre Dışı"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "Etkinleştir"
 
@@ -1289,12 +1241,10 @@ msgid "Every %d Hours"
 msgstr "Her% d saatte bir"
 
 #: flowview_schedules.php:45
-#, fuzzy
 msgid "Every Day"
 msgstr "Her Gün"
 
 #: flowview_schedules.php:46
-#, fuzzy
 msgid "Every Week"
 msgstr "Her Hafta"
 
@@ -1304,12 +1254,10 @@ msgid "Every %d Weeks, 2"
 msgstr "Her% d Hafta, 2"
 
 #: flowview_schedules.php:48
-#, fuzzy
 msgid "Every Month"
 msgstr "Her Ay"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "Başlık"
 
@@ -1324,7 +1272,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "FlowView Takvimi için bir Rapor Başlığı girin."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "Etkin"
 
@@ -1358,7 +1305,6 @@ msgstr ""
 "postalar bu süreden artı yukarıda verilen aralıktan hesaplanır."
 
 #: flowview_schedules.php:94
-#, fuzzy
 msgid "Email Addresses"
 msgstr "E-Posta Adres"
 
@@ -1409,12 +1355,10 @@ msgstr "FlowView Takvimleri"
 
 #: flowview_schedules.php:411 flowview_schedules.php:492 functions.php:318
 #: setup.php:167
-#, fuzzy
 msgid "Schedules"
-msgstr "Eğitim Programları"
+msgstr "Toplu Zamanlama"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "Varsayılan"
 
@@ -1424,7 +1368,6 @@ msgid "Schedule Title"
 msgstr "Program Başlığı"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "Aralık"
 
@@ -1434,7 +1377,6 @@ msgid "Next Send"
 msgstr "Sonraki Gönder"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "E-posta"
 
@@ -1444,7 +1386,6 @@ msgid "Report: %s"
 msgstr "Rapor: %s"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "Hariç tut"
 
@@ -1474,12 +1415,10 @@ msgid "Top 5 Samples"
 msgstr "En İyi 5 Örnek"
 
 #: functions.php:126
-#, fuzzy
 msgid "Show/Hide"
-msgstr "Göster / Gizle"
+msgstr "Göster/gizle"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "Tablo"
 
@@ -1519,7 +1458,6 @@ msgid "Manage Schedules"
 msgstr "Programları Yönet"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "Bilinmeyen"
 
@@ -1802,6 +1740,5 @@ msgstr ""
 "Etki alanından sıyrılacak etki alanı adlarının virgülle ayrılmış listesi."
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "Çeşitli"
