--- a/locales/po/vi-VN.po
+++ b/locales/po/vi-VN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 21:46-0400\n"
+"PO-Revision-Date: 2019-07-21 21:27-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: vi_VN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "Báo cáo thống kê"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "Tóm tắt"
 
@@ -43,7 +42,6 @@ msgid "UDP/TCP Port"
 msgstr "Cổng UDP / TCP"
 
 #: arrays.php:31 flowview.php:800
-#, fuzzy
 msgid "Destination IP"
 msgstr "Destination IP"
 
@@ -63,7 +61,6 @@ msgid "Source or Destination IP"
 msgstr "IP nguồn hoặc đích"
 
 #: arrays.php:35
-#, fuzzy
 msgid "IP Protocol"
 msgstr "Giao thức IP"
 
@@ -198,7 +195,6 @@ msgid "Select One"
 msgstr "Chọn một"
 
 #: arrays.php:71
-#, fuzzy
 msgid "TCP"
 msgstr "TCP"
 
@@ -398,7 +394,6 @@ msgid "IL"
 msgstr "IL"
 
 #: arrays.php:111
-#, fuzzy
 msgid "IPv6"
 msgstr "IPv6"
 
@@ -503,22 +498,18 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "Có"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "Không"
 
 #: arrays.php:166 arrays.php:177 functions.php:117
-#, fuzzy
 msgid "None"
 msgstr "Không"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "Tất cả"
 
@@ -548,7 +539,6 @@ msgstr "%s byte"
 #: flowview.php:823 flowview.php:830 flowview.php:838 flowview.php:845
 #: flowview.php:853 flowview.php:860 flowview.php:867 flowview.php:875
 #: functions.php:590
-#, fuzzy
 msgid "Bytes"
 msgstr "Bytes"
 
@@ -577,7 +567,6 @@ msgstr "Gói"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "Cổng"
 
@@ -598,7 +587,6 @@ msgid "Src/Dest IP"
 msgstr "Src / Dest IP"
 
 #: arrays.php:278 arrays.php:292 arrays.php:293 arrays.php:294 flowview.php:821
-#, fuzzy
 msgid "Protocol"
 msgstr "Giao thức"
 
@@ -638,7 +626,6 @@ msgid "Dest Prefix"
 msgstr "Tiền tố Dest"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "Kích hoạt"
 
@@ -658,7 +645,6 @@ msgid "Dest Port"
 msgstr "Cổng Dest"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "Thời gian kết thúc"
 
@@ -673,12 +659,10 @@ msgid "Src IF"
 msgstr "NẾU"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "Src Port"
 msgstr "Cổng Src"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "Thời gian bắt đầu"
 
@@ -688,7 +672,6 @@ msgid "Ts"
 msgstr "Ts"
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
 msgstr "Báo xấu"
 
@@ -698,7 +681,6 @@ msgid "Flow Filter Constraints"
 msgstr "Ràng buộc bộ lọc dòng chảy"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "Bộ lọc"
 
@@ -708,17 +690,14 @@ msgid "Listener"
 msgstr "Người nghe"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
 msgstr "Đặt trước"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "Tùy chỉnh"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "Ngày bắt đầu"
 
@@ -728,7 +707,6 @@ msgid "Start Date Selector"
 msgstr "Ngày bắt đầu chọn"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "Ngày kết thúc"
 
@@ -738,12 +716,10 @@ msgid "End Date Selector"
 msgstr "Bộ chọn ngày kết thúc"
 
 #: flowview.php:335
-#, fuzzy
 msgid "Protocols"
 msgstr "Giao thức"
 
 #: flowview.php:341
-#, fuzzy
 msgid "TCP Flags"
 msgstr "TCP Flags"
 
@@ -789,7 +765,6 @@ msgstr ""
 "nghĩa là bất kỳ Cổng nào ngoài 80)"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "Ghi chú:"
 
@@ -834,27 +809,22 @@ msgid "Minimum Bytes:"
 msgstr "Byte tối thiểu:"
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "Xem"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "Mặc định"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "Lưu"
 
 #: flowview.php:457
-#, fuzzy
 msgid "Save As"
 msgstr "Lưu thành"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "Xóa"
 
@@ -869,12 +839,10 @@ msgid "New Query"
 msgstr "Truy vấn mới"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "Hủy"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "Cập nhật"
 
@@ -894,12 +862,10 @@ msgid "Filter Updated"
 msgstr "Cập nhật bộ lọc"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP"
 
 #: flowview.php:828
-#, fuzzy
 msgid "Interface"
 msgstr "Giao diện"
 
@@ -909,7 +875,6 @@ msgid "AS"
 msgstr "NHƯ"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "Tiền tố"
 
@@ -944,7 +909,7 @@ msgid "%d Year"
 msgstr "% d Năm"
 
 #: flowview_devices.php:48
-#, fuzzy, php-format
+#, php-format
 msgid "%d Minute"
 msgstr "%d phút"
 
@@ -1069,7 +1034,6 @@ msgid "Name of the device to be displayed."
 msgstr "Tên của thiết bị sẽ được hiển thị."
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "Danh mục"
 
@@ -1140,7 +1104,6 @@ msgstr ""
 "dụng nhiều CPU hơn để lưu trữ và truy xuất kết quả."
 
 #: flowview_devices.php:156 flowview_devices.php:457
-#, fuzzy
 msgid "Rotation"
 msgstr "Xoay"
 
@@ -1150,7 +1113,6 @@ msgid "How often to create a new Flow File."
 msgstr "Tần suất để tạo một tệp Flow mới."
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "Hết hạn"
 
@@ -1183,7 +1145,6 @@ msgid "You must select at least one device."
 msgstr "Bạn phải chọn ít nhất một thiết bị."
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "Tiếp tục"
 
@@ -1203,12 +1164,10 @@ msgid "FlowView Listeners"
 msgstr "Trình nghe FlowView"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "Tìm kiếm"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "Đi"
 
@@ -1218,7 +1177,6 @@ msgid "Set/Refresh Filters"
 msgstr "Đặt / Làm mới Bộ lọc"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "Xóa"
 
@@ -1233,7 +1191,6 @@ msgid "Listeners"
 msgstr "Người nghe"
 
 #: flowview_devices.php:450
-#, fuzzy
 msgid "Name"
 msgstr "Tên"
 
@@ -1243,19 +1200,16 @@ msgid "Allowed From"
 msgstr "Được phép từ"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "Phiên bản"
 
 #: flowview_devices.php:456
-#, fuzzy
 msgid "Compression"
 msgstr ""
 "\n"
 "Nén"
 
 #: flowview_devices.php:458
-#, fuzzy
 msgid "Expire"
 msgstr "Hết hiệu lực"
 
@@ -1270,12 +1224,10 @@ msgid "Send Now"
 msgstr "Gửi ngay bây giờ"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "Vô hiệu hóa"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "Bật"
 
@@ -1311,7 +1263,6 @@ msgid "Every Month"
 msgstr "Mỗi tháng"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "Tiêu đề"
 
@@ -1326,7 +1277,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "Nhập một Tiêu đề báo cáo cho Lịch trình FlowView."
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "Bật"
 
@@ -1341,7 +1291,6 @@ msgid "Name of the query to run."
 msgstr "Tên của truy vấn để chạy."
 
 #: flowview_schedules.php:76
-#, fuzzy
 msgid "Send Interval"
 msgstr "Gửi Khoảng thời gian"
 
@@ -1361,9 +1310,8 @@ msgstr ""
 "được đưa ra ở trên."
 
 #: flowview_schedules.php:94
-#, fuzzy
 msgid "Email Addresses"
-msgstr "Địa chỉ email"
+msgstr "Địa chỉ Email"
 
 #: flowview_schedules.php:95
 #, fuzzy
@@ -1412,12 +1360,10 @@ msgstr "Lịch trình FlowView"
 
 #: flowview_schedules.php:411 flowview_schedules.php:492 functions.php:318
 #: setup.php:167
-#, fuzzy
 msgid "Schedules"
 msgstr "Kế hoạch"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "Mặc định"
 
@@ -1427,7 +1373,6 @@ msgid "Schedule Title"
 msgstr "Lịch trình tiêu đề"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "Interval"
 
@@ -1437,7 +1382,6 @@ msgid "Next Send"
 msgstr "Gửi tiếp theo"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "Email"
 
@@ -1447,7 +1391,6 @@ msgid "Report: %s"
 msgstr "Báo cáo"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "Loại trừ"
 
@@ -1482,7 +1425,6 @@ msgid "Show/Hide"
 msgstr "Hiện an"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "Bảng"
 
@@ -1502,7 +1444,6 @@ msgid "Flows Bar"
 msgstr "Thanh chảy"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
 msgstr "Bộ lọc"
 
@@ -1522,7 +1463,6 @@ msgid "Manage Schedules"
 msgstr "Quản lý lịch"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "Không xác định"
 
@@ -1805,6 +1745,5 @@ msgstr ""
 "miền."
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "Linh tinh"
