--- a/locales/po/zh-TW.po
+++ b/locales/po/zh-TW.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-19 09:50+0000\n"
-"PO-Revision-Date: 2019-03-18 21:48-0400\n"
+"PO-Revision-Date: 2019-07-21 21:28-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: arrays.php:26
 #, fuzzy
@@ -23,7 +23,6 @@ msgid "Select a Statistic Report"
 msgstr "統計報告"
 
 #: arrays.php:27
-#, fuzzy
 msgid "Summary"
 msgstr "摘要"
 
@@ -43,12 +42,10 @@ msgid "UDP/TCP Port"
 msgstr "UDP / TCP端口"
 
 #: arrays.php:31 flowview.php:800
-#, fuzzy
 msgid "Destination IP"
 msgstr "目的 IP"
 
 #: arrays.php:32 flowview.php:358 flowview.php:799
-#, fuzzy
 msgid "Source IP"
 msgstr "來源IP"
 
@@ -63,7 +60,6 @@ msgid "Source or Destination IP"
 msgstr "源或目標IP"
 
 #: arrays.php:35
-#, fuzzy
 msgid "IP Protocol"
 msgstr "IP 通訊協定"
 
@@ -193,7 +189,6 @@ msgid "Entirely in Specified Time Span"
 msgstr "完全在指定的時間範圍內"
 
 #: arrays.php:70
-#, fuzzy
 msgid "Select One"
 msgstr "-選擇一個"
 
@@ -423,12 +418,10 @@ msgid "IDRP"
 msgstr "IDRP"
 
 #: arrays.php:116
-#, fuzzy
 msgid "RSVP"
 msgstr "活動報名"
 
 #: arrays.php:117
-#, fuzzy
 msgid "GRE"
 msgstr "GRE"
 
@@ -503,12 +496,10 @@ msgid "ENCAP"
 msgstr "ENCAP"
 
 #: arrays.php:135 flowview_schedules.php:522
-#, fuzzy
 msgid "Yes"
 msgstr "是"
 
 #: arrays.php:136 flowview_schedules.php:522
-#, fuzzy
 msgid "No"
 msgstr "否"
 
@@ -518,7 +509,6 @@ msgid "None"
 msgstr "無"
 
 #: arrays.php:188
-#, fuzzy
 msgid "All"
 msgstr "全部"
 
@@ -529,7 +519,6 @@ msgid "Top %d"
 msgstr "最高％d"
 
 #: arrays.php:207
-#, fuzzy
 msgid "No Limit"
 msgstr "沒有限制"
 
@@ -548,7 +537,6 @@ msgstr "％s字節"
 #: flowview.php:823 flowview.php:830 flowview.php:838 flowview.php:845
 #: flowview.php:853 flowview.php:860 flowview.php:867 flowview.php:875
 #: functions.php:590
-#, fuzzy
 msgid "Bytes"
 msgstr "位元組"
 
@@ -559,7 +547,6 @@ msgstr "位元組"
 #: flowview.php:808 flowview.php:815 flowview.php:822 flowview.php:829
 #: flowview.php:837 flowview.php:844 flowview.php:852 flowview.php:859
 #: flowview.php:866 flowview.php:874 functions.php:592
-#, fuzzy
 msgid "Flows"
 msgstr "資料流"
 
@@ -571,13 +558,11 @@ msgstr "資料流"
 #: flowview.php:824 flowview.php:831 flowview.php:839 flowview.php:846
 #: flowview.php:854 flowview.php:861 flowview.php:868 flowview.php:876
 #: functions.php:591
-#, fuzzy
 msgid "Packets"
 msgstr "封包"
 
 #: arrays.php:271 arrays.php:272 arrays.php:273 flowview.php:807
 #: flowview_devices.php:124 flowview_devices.php:454
-#, fuzzy
 msgid "Port"
 msgstr "端口"
 
@@ -588,7 +573,6 @@ msgid "Dest IP"
 msgstr "目的地IP"
 
 #: arrays.php:275 arrays.php:276 arrays.php:292 arrays.php:293 arrays.php:294
-#, fuzzy
 msgid "Src IP"
 msgstr "來源 IP"
 
@@ -598,7 +582,6 @@ msgid "Src/Dest IP"
 msgstr "Src / Dest IP"
 
 #: arrays.php:278 arrays.php:292 arrays.php:293 arrays.php:294 flowview.php:821
-#, fuzzy
 msgid "Protocol"
 msgstr "協議"
 
@@ -623,7 +606,6 @@ msgid "Dest AS"
 msgstr "Dest AS"
 
 #: arrays.php:284 flowview.php:858
-#, fuzzy
 msgid "TOS"
 msgstr "服務條款"
 
@@ -638,7 +620,6 @@ msgid "Dest Prefix"
 msgstr "Dest前綴"
 
 #: arrays.php:292
-#, fuzzy
 msgid "Active"
 msgstr "啟用"
 
@@ -653,12 +634,10 @@ msgid "Dest IF"
 msgstr "Dest IF"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "Dest Port"
 msgstr "目的通訊埠"
 
 #: arrays.php:292 arrays.php:294
-#, fuzzy
 msgid "End Time"
 msgstr "結束時間"
 
@@ -678,7 +657,6 @@ msgid "Src Port"
 msgstr "Src港口"
 
 #: arrays.php:292 arrays.php:294 flowview_schedules.php:85
-#, fuzzy
 msgid "Start Time"
 msgstr "開始時間"
 
@@ -688,9 +666,8 @@ msgid "Ts"
 msgstr "TS"
 
 #: arrays.php:294
-#, fuzzy
 msgid "Flags"
-msgstr "各式旗幟"
+msgstr "標記"
 
 #: flowview.php:275
 #, fuzzy
@@ -698,27 +675,22 @@ msgid "Flow Filter Constraints"
 msgstr "流量過濾器約束"
 
 #: flowview.php:283
-#, fuzzy
 msgid "Filter"
 msgstr "篩選"
 
 #: flowview.php:289
-#, fuzzy
 msgid "Listener"
 msgstr "成員"
 
 #: flowview.php:297
-#, fuzzy
 msgid "Presets"
 msgstr "預設"
 
 #: flowview.php:302 flowview.php:599
-#, fuzzy
 msgid "Custom"
 msgstr "自訂"
 
 #: flowview.php:316 flowview_schedules.php:504
-#, fuzzy
 msgid "Start Date"
 msgstr "開始日期"
 
@@ -728,7 +700,6 @@ msgid "Start Date Selector"
 msgstr "開始日期選擇器"
 
 #: flowview.php:323
-#, fuzzy
 msgid "End Date"
 msgstr "結束日期"
 
@@ -738,7 +709,6 @@ msgid "End Date Selector"
 msgstr "結束日期選擇器"
 
 #: flowview.php:335
-#, fuzzy
 msgid "Protocols"
 msgstr "協定"
 
@@ -788,12 +758,10 @@ msgstr ""
 "如，端口為-80，將表示任何端口，但為80）"
 
 #: flowview.php:411
-#, fuzzy
 msgid "Note:"
 msgstr "備註："
 
 #: flowview.php:420
-#, fuzzy
 msgid "Report Parameters"
 msgstr "報告參數"
 
@@ -833,32 +801,26 @@ msgid "Minimum Bytes:"
 msgstr "最小字節數："
 
 #: flowview.php:454
-#, fuzzy
 msgid "View"
 msgstr "查看"
 
 #: flowview.php:455
-#, fuzzy
 msgid "Defaults"
 msgstr "當前課程 (預設為全部)"
 
 #: flowview.php:456 flowview.php:473
-#, fuzzy
 msgid "Save"
 msgstr "儲存"
 
 #: flowview.php:457
-#, fuzzy
 msgid "Save As"
 msgstr "另存為"
 
 #: flowview.php:458 flowview_devices.php:30 flowview_schedules.php:34
-#, fuzzy
 msgid "Delete"
 msgstr "刪除"
 
 #: flowview.php:467 flowview_schedules.php:70 flowview_schedules.php:502
-#, fuzzy
 msgid "Filter Name"
 msgstr "過濾條件名稱"
 
@@ -868,12 +830,10 @@ msgid "New Query"
 msgstr "新查詢"
 
 #: flowview.php:472 flowview_devices.php:262 flowview_schedules.php:228
-#, fuzzy
 msgid "Cancel"
 msgstr "取消"
 
 #: flowview.php:654
-#, fuzzy
 msgid "Update"
 msgstr "更新"
 
@@ -893,27 +853,23 @@ msgid "Filter Updated"
 msgstr "過濾器已更新"
 
 #: flowview.php:814
-#, fuzzy
 msgid "IP"
 msgstr "IP"
 
 #: flowview.php:828
-#, fuzzy
 msgid "Interface"
-msgstr "用戶介面"
+msgstr "界面"
 
 #: flowview.php:843
-#, fuzzy
 msgid "AS"
 msgstr "AS"
 
 #: flowview.php:865
-#, fuzzy
 msgid "Prefix"
 msgstr "標題"
 
 #: flowview_devices.php:36 flowview_devices.php:37
-#, fuzzy, php-format
+#, php-format
 msgid "%d Days"
 msgstr "%d 天"
 
@@ -943,9 +899,9 @@ msgid "%d Year"
 msgstr "％d年"
 
 #: flowview_devices.php:48
-#, fuzzy, php-format
+#, php-format
 msgid "%d Minute"
-msgstr "％d分鐘"
+msgstr "%d 分鐘"
 
 #: flowview_devices.php:49 flowview_devices.php:50 flowview_devices.php:51
 #, fuzzy, php-format
@@ -1058,7 +1014,6 @@ msgid "9 (Highest)"
 msgstr "9（最高）"
 
 #: flowview_devices.php:101
-#, fuzzy
 msgid "Device Name"
 msgstr "設備名稱"
 
@@ -1068,7 +1023,6 @@ msgid "Name of the device to be displayed."
 msgstr "要顯示的設備的名稱。"
 
 #: flowview_devices.php:108 flowview_devices.php:451
-#, fuzzy
 msgid "Directory"
 msgstr "目錄"
 
@@ -1135,7 +1089,6 @@ msgstr ""
 "流文件的壓縮級別。更高的壓縮可以節省空間，但使用更多的CPU來存儲和檢索結果。"
 
 #: flowview_devices.php:156 flowview_devices.php:457
-#, fuzzy
 msgid "Rotation"
 msgstr "旋轉"
 
@@ -1145,7 +1098,6 @@ msgid "How often to create a new Flow File."
 msgstr "多久創建一個新的Flow文件。"
 
 #: flowview_devices.php:164
-#, fuzzy
 msgid "Expiration"
 msgstr "到期日"
 
@@ -1175,7 +1127,6 @@ msgid "You must select at least one device."
 msgstr "您必須至少選擇一個設備。"
 
 #: flowview_devices.php:254 flowview_schedules.php:220
-#, fuzzy
 msgid "Continue"
 msgstr "繼續"
 
@@ -1195,12 +1146,10 @@ msgid "FlowView Listeners"
 msgstr "FlowView監聽器"
 
 #: flowview_devices.php:398 flowview_schedules.php:405
-#, fuzzy
 msgid "Search"
 msgstr "搜尋"
 
 #: flowview_devices.php:404 flowview_schedules.php:426
-#, fuzzy
 msgid "Go"
 msgstr "送出"
 
@@ -1210,22 +1159,18 @@ msgid "Set/Refresh Filters"
 msgstr "設置/刷新過濾器"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear"
 msgstr "清除"
 
 #: flowview_devices.php:407 flowview_schedules.php:429 functions.php:145
-#, fuzzy
 msgid "Clear Filters"
 msgstr "清除過濾器"
 
 #: flowview_devices.php:441 functions.php:314 setup.php:139
-#, fuzzy
 msgid "Listeners"
 msgstr "成員"
 
 #: flowview_devices.php:450
-#, fuzzy
 msgid "Name"
 msgstr "名稱"
 
@@ -1235,17 +1180,14 @@ msgid "Allowed From"
 msgstr "允許來自"
 
 #: flowview_devices.php:455
-#, fuzzy
 msgid "Version"
 msgstr "版本"
 
 #: flowview_devices.php:456
-#, fuzzy
 msgid "Compression"
 msgstr "壓縮"
 
 #: flowview_devices.php:458
-#, fuzzy
 msgid "Expire"
 msgstr "訂閱的課程 %s 不久將到期"
 
@@ -1255,17 +1197,14 @@ msgid "No Devices"
 msgstr "設備"
 
 #: flowview_schedules.php:33
-#, fuzzy
 msgid "Send Now"
 msgstr "立刻寄出"
 
 #: flowview_schedules.php:35
-#, fuzzy
 msgid "Disable"
 msgstr "停用"
 
 #: flowview_schedules.php:36
-#, fuzzy
 msgid "Enable"
 msgstr "啟用"
 
@@ -1281,12 +1220,10 @@ msgid "Every %d Hours"
 msgstr "每個％d小時"
 
 #: flowview_schedules.php:45
-#, fuzzy
 msgid "Every Day"
 msgstr "每天"
 
 #: flowview_schedules.php:46
-#, fuzzy
 msgid "Every Week"
 msgstr "每週"
 
@@ -1301,7 +1238,6 @@ msgid "Every Month"
 msgstr "每個月"
 
 #: flowview_schedules.php:53
-#, fuzzy
 msgid "Title"
 msgstr "標題"
 
@@ -1316,7 +1252,6 @@ msgid "Enter a Report Title for the FlowView Schedule."
 msgstr "輸入FlowView計劃的報告標題。"
 
 #: flowview_schedules.php:62 flowview_schedules.php:507
-#, fuzzy
 msgid "Enabled"
 msgstr "啟用"
 
@@ -1350,7 +1285,6 @@ msgstr ""
 "加上上面給出的間隔計算出來。"
 
 #: flowview_schedules.php:94
-#, fuzzy
 msgid "Email Addresses"
 msgstr "電子郵件信箱"
 
@@ -1401,22 +1335,18 @@ msgstr "FlowView計劃"
 
 #: flowview_schedules.php:411 flowview_schedules.php:492 functions.php:318
 #: setup.php:167
-#, fuzzy
 msgid "Schedules"
 msgstr "排程"
 
 #: flowview_schedules.php:415
-#, fuzzy
 msgid "Default"
 msgstr "預設"
 
 #: flowview_schedules.php:501
-#, fuzzy
 msgid "Schedule Title"
 msgstr "計畫標題"
 
 #: flowview_schedules.php:503
-#, fuzzy
 msgid "Interval"
 msgstr "間隔"
 
@@ -1426,7 +1356,6 @@ msgid "Next Send"
 msgstr "下一步發送"
 
 #: flowview_schedules.php:506
-#, fuzzy
 msgid "Email"
 msgstr "電子郵件"
 
@@ -1436,7 +1365,6 @@ msgid "Report: %s"
 msgstr "報告：％s"
 
 #: functions.php:113
-#, fuzzy
 msgid "Exclude"
 msgstr "排除"
 
@@ -1466,12 +1394,10 @@ msgid "Top 5 Samples"
 msgstr "前5個樣本"
 
 #: functions.php:126
-#, fuzzy
 msgid "Show/Hide"
 msgstr "顯示/隱藏"
 
 #: functions.php:130
-#, fuzzy
 msgid "Table"
 msgstr "表格"
 
@@ -1491,7 +1417,6 @@ msgid "Flows Bar"
 msgstr "流動吧"
 
 #: functions.php:311
-#, fuzzy
 msgid "Filters"
 msgstr "過濾器"
 
@@ -1511,7 +1436,6 @@ msgid "Manage Schedules"
 msgstr "管理計劃"
 
 #: functions.php:323
-#, fuzzy
 msgid "Unknown"
 msgstr "未知"
 
@@ -1788,6 +1712,5 @@ msgid "A comma delimited list of domains names to strip from the domain."
 msgstr "以逗號分隔的域名列表，用於從域中刪除。"
 
 #: setup.php:271
-#, fuzzy
 msgid "Misc"
 msgstr "雜項"
